--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "ar-project",
   "version": "1.0.0",
-  "description": "AR Project with static hosting",
+  "description": "AR Project with simple server",
+  "main": "server.js",
   "scripts": {
-    "build": "echo 'No build step required'"
+    "start": "node server.js",
+    "build": "echo 'No build step required'",
+    "vercel-build": "echo 'No build step required'"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 } 
